<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- General app strings -->
    <string name="app_name">openHAB - RFF</string>
    <string name="openhab_service_type">_openhab-server-ssl._tcp.local.</string>
    <string name="openhab_demo_url">https://demo.openhab.org:8443/</string>
    <string name="openhab_demo_sitemap_postfix">rest/sitemaps/demo</string>
    <string name="app_preferences_name">Settings</string>

    <!-- Main menu items -->
    <string name="mainmenu_openhab_preferences">Settings</string>
    <string name="mainmenu_openhab_selectsitemap">Select default sitemap</string>
    <string name="mainmenu_openhab_writetag">Write NFC tag</string>
    <string name="mainmenu_openhab_info">openHAB info</string>
    <string name="mainmenu_openhab_clearcache">Clear images cache</string>

    <!-- App settings strings -->
    <string name="settings_title">HABDroid Settings</string>
    <string name="settings_openhab_url">openHAB URL</string>
    <string name="settings_openhab_url_summary">Manually configured openHAB URL. Disables autodiscovery if configured.</string>
    <string name="settings_openhab_alturl">openHAB Remote URL</string>
    <string name="settings_openhab_alturl_summary">Remote openHAB URL (used when local openHAB is unavailable)</string>
    <string name="settings_openhab_username">Username</string>
    <string name="settings_openhab_username_summary">openHAB username</string>
    <string name="settings_openhab_password">Password</string>
    <string name="settings_openhab_password_summary">openHAB password</string>
    <string name="settings_openhab_screentimeroff">Disable display timer</string>
    <string name="settings_openhab_screentimeroff_summary">Disable display switch off timer when HABDroid is running</string>
    <string name="settings_openhab_demomode">Demo mode</string>
    <string name="settings_openhab_demomode_summary">Run HABDroid in demo mode</string>
    <string name="settings_openhab_theme">HABDroid Theme</string>
    <string name="settings_openhab_animation">Animation style</string>
    <string name="settings_openhab_appversion">HABDroid Version</string>
    <string name="settings_openhab_sslcert">Ignore SSL certificate</string>
    <string name="settings_openhab_sslcert_summary">Ignore certificate validation during SSL handshake</string>
    <string name="settings_openhab_sslhost">Ignore SSL hostname</string>
    <string name="settings_openhab_sslhost_summary">Ignore hostname check during SSL handshake</string>

    <!-- App messages strings -->
    <string name="info_demo_mode">HABDroid is running in demo mode. To connect to your openHAB please go to settings menu.</string>
    <string name="info_conn_url">Connecting to configured URL</string>
    <string name="info_conn_rem_url">Connecting to remote URL</string>
    <string name="info_discovery">Discovering openHAB. Please wait...</string>
    <string name="error_no_url">Please check that openHAB is running or configure openHAB URL or remote URL</string>
    <string name="error_authentication_failed">Authentication Failed. Please check Username/Password settings</string>
    <string name="error_empty_sitemap_list">openHAB returned empty sitemap list</string>
    <string name="error_network_not_available">Network is not available</string>
    <string name="error_no_uuid">Unable to get openHAB UUID, connection failed</string>
    <string name="erorr_invalid_url">Please enter a valid URL in a \'protocol://host:port/\' form</string>
    <string name="erorr_no_wifi_mcast_permission">CHANGE_WIFI_MULTICAST_STATE permission is not granted, openHAB discovery will be disabled!</string>
    <string name="erorr_no_wifi_state_permission">ACCESS_WIFI_STATE permission is not granted, openHAB discovery will be disabled!</string>
    <string name="error_connection_failed">Connection to host failed</string>
    <string name="title_activity_openhabwritetag">Write NFC tag</string>
    <string name="title_activity_openhabinfo">openHAB Information</string>
    <string name="info_write_tag">Touch the tag and keep it close until the confirmation message appear</string>
    <string name="info_write_tag_progress">Writing the tag</string>
    <string name="info_write_tag_finished">Successfully finished</string>
    <string name="info_write_failed">Tag write error</string>
    <string name="info_write_tag_unsupported">This device doesn\'t have NFC support :-(</string>
    <string name="info_write_tag_disabled">NFC is disabled. Please enable it in device settings menu.</string>
    <string name="info_openhab_version_label">openHAB Version</string>
    <string name="info_openhab_uuid_label">openHAB UUID</string>
    <string name="info_openhab_secret_label">openHAB Secret</string>
    <string name="action_settings">Settings</string>
    <string name="nfc_dialog_title">Please select NFC tag action</string>
    <string name="info_not_set">Not set</string>

    <!-- Strings for MemorizingTrustManager activity -->
    <string name="mtm_accept_cert">Accept unknown Certificate?</string>
    <string name="mtm_decision_always">Always</string>
    <string name="mtm_decision_once">Once</string>
    <string name="mtm_decision_abort">Abort</string>
    <string name="mtm_notification">Certificate verification</string>

    <!-- Flipper -->
    <string name="title_room_flipper">Room Flipper</string>
    <string name="title_unit_placement">Unit Placement</string>
    <string name="title_room_config">Room Config</string>
    <string name="title_rule_config">Rule Config</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">GlobalAction</string>
    <string name="action_add_unit">Add unit</string>
    <string name="action_selection">Selection</string>
    <string name="str_img1">Image1</string>
    <string name="str_img2">Image2</string>
    <string name="action_remove_unit">Remove unit</string>
    <string name="action_edit_unit">Edit unit</string>
    <string name="action_remove_room">Remove</string>
    <string name="action_edit_room">Edit</string>
    <string name="action_clone_room">Clone</string>
    <string name="deselect_all">Deselect all</string>
    <string name="select_all">Select all</string>
    <string name="select_all_types">Select all of current type(s)</string>
    <string name="select_all_clones">Select all clones</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_add_room">Add room</string>
    <string name="title_activity_rule_editor">RuleEditActivity</string>
    <string name="title_activity_rule">RuleActivity</string>
    <string name="rule_tab_if">IF</string>
    <string name="rule_tab_then">THEN</string>
    <string name="mainmenu_openhab_flipper">Flipper Navigation</string>
    <string name="action_speak_room">Speak room</string>
    <string name="service_name">openHAB service</string>
    <string name="title_activity_room_config">Room Configuration</string>
    <string name="hab_group">HAB group</string>
    <string name="action_list_view">List view</string>
    <string name="action_launch_wear_app">Android Wear</string>

    <!-- Command phrase -->
    <string name="command_wakeup_listener">yo hab</string>
    <string name="command_close_listener">bye hab</string>
    <string name="unit">Unit</string>
    <string name="new_operation">New operation:</string>
    <string name="operation">Operation</string>
    <string name="static_value">Static value:</string>
    <string name="no_value"><![CDATA[<No value>]]></string>
    <string name="select_unit">Pick a unit</string>
    <string name="select_operation">Pick an operation</string>
    <string name="text_value">Text value:</string>
    <string name="select_target_unit">Pick a target unit</string>
    <string name="select_source_unit">Pick a source unit</string>
    <string name="action_launch_rules_activity">Open rules handler</string>
    <string name="action_edit_action">Edit action</string>
    <string name="action_delete_rule_action">Delete action</string>
    <string name="action_add_rule_command">Add command</string>
    <string name="action_add_rule_message">Add message</string>
    <string name="action_delete_operation_member">Delete operation member</string>
    <string name="action_edit_operation_member">Edit operation</string>
    <string name="speech_navigate_rooms">Room name</string>
    <string name="title_activity_rule_list">RuleListActivity</string>
    <string name="action_delete_rule">Remove rule</string>
    <string name="action_edit_rule">Edit rule</string>
    <string name="action_add_rule">Add rule</string>
    <string name="missing_openhab_group_for_room"><![CDATA[<No OpenHAB group defined>]]></string>
    <string name="install_app_name">OpenHAB - Room flipper fork</string>
    <string name="choice_next">Next</string>
    <string name="choice_done">Done</string>
    <string name="choice_cancel">Cancel</string>
    <string name="unknown_command">Sorry, didn\'t get that.</string>
    <string name="empty_command">Command message was empty</string>
    <string name="wearable_api_unavailable">Wearable API is unavailable.</string>
</resources>
