<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/action_edit_room_from_flipper"
        android:icon="@android:drawable/ic_menu_edit"
        android:title="@string/action_edit_room"
        android:showAsAction="always"/>
    <item android:id="@+id/action_add_room_from_flipper"
        android:icon="@android:drawable/ic_menu_add"
        android:title="@string/action_add_room"
        android:showAsAction="always"/>
    <item android:id="@+id/action_speak_room_from_flipper"
        android:icon="@android:drawable/ic_btn_speak_now"
        android:title="@string/action_speak_room"
        android:showAsAction="always"/>
    <item android:id="@+id/action_go_to_list_view"
        android:icon="@android:drawable/ic_menu_sort_by_size"
        android:title="@string/action_list_view"
        android:showAsAction="always"/>
    <item android:id="@+id/action_start_wear_app"
        android:icon="@android:drawable/ic_menu_recent_history"
        android:title="@string/action_launch_wear_app"
        android:showAsAction="always"/>
    <item android:id="@+id/action_open_rules"
        android:icon="@drawable/ic_menu_openhab_rule"
        android:title="@string/action_launch_rules_activity"
        android:showAsAction="always"/>
</menu>