<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/action_edit_rule_action"
        android:icon="@android:drawable/ic_menu_edit"
        android:title="@string/action_edit_action"
        android:showAsAction="always"/>
    <item android:id="@+id/action_delete_rule_action"
        android:icon="@android:drawable/ic_menu_delete"
        android:title="@string/action_delete_rule_action"
        android:showAsAction="always"/>
    <item android:id="@+id/action_add_rule_command_action"
        android:icon="@drawable/ic_menu_add_action"
        android:title="@string/action_add_rule_command"
        android:showAsAction="always"/>
    <item android:id="@+id/action_add_rule_message_action"
        android:icon="@drawable/ic_menu_add_notification"
        android:title="@string/action_add_rule_message"
        android:showAsAction="always"/>
</menu>