<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:columnCount="2"
        android:rowCount="12"
        android:id="@+id/labelStaticValue">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_target_unit"
            android:id="@+id/button_rule_action_builder_target_unit"
            android:layout_row="1"
            android:layout_column="0" />

        <TextView
            android:id="@+id/text_rule_action_builder_target_unit"
            android:text="@string/no_value"
            android:layout_column="0"
            android:layout_row="2"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_marginTop="16dp" />

        <Spinner
            android:id="@+id/spinner_rule_action_builder_static_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="3"
            android:layout_column="0" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_source_unit"
            android:id="@+id/button_rule_action_builder_source_unit"
            android:layout_row="4"
            android:layout_column="0" />

        <TextView
            android:id="@+id/text_rule_action_builder_source_unit"
            android:text="@string/no_value"
            android:layout_column="0"
            android:layout_row="5"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_marginTop="16dp" />

        <TextView
            android:id="@+id/text_rule_action_builder_text_value_label"
            android:text="@string/text_value"
            android:layout_column="0"
            android:layout_row="6"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_marginTop="16dp" />

        <EditText
            android:id="@+id/edit_rule_action_builder_text_value"
            android:layout_column="0"
            android:layout_row="7"
            android:layout_gravity="fill_horizontal"
            android:inputType="text"
            android:layout_marginTop="8dp" />

    </GridLayout>
</ScrollView>
